# https://python-poetry.org/docs/pyproject
# minimal required information

[project]
name = "osipi"
version = "0.1.2"
dependencies = [
  "numpy",
  "scipy"
]

# optional information

description = "The authorative python package for perfusion MRI"
readme = "README.md"
authors = [
  { name = "Luis Torres", email = "luistorres@flywheel.io" },
  { name = "Steven Sourbron", email = "s.sourbron@sheffield.ac.uk" },
  ]
license = { file = "LICENSE" }
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  'Development Status :: 3 - Alpha',

  # Indicate who your project is intended for
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering',
  'Operating System :: OS Independent',

  'License :: OSI Approved :: Apache Software License',
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
keywords = ['python', "medical imaging", "perfusion", "MRI"]

requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://osipi.github.io/pypi"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
tests = [
  "pytest",
  "matplotlib",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-remove-toctrees",
    "autodocsumm",
    "docutils",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "sphinx-gallery",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv", ".eggs", ".git", ".git-rewrite","__init__.py",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype",
    ".ruff_cache", ".svn", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "site-packages", "venv",
]

line-length = 100


[tool.ruff.lint]
# Enable Pyflakes (`F`), a subset of the pycodestyle (`E`) codes, and isort (`I`).
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = false

docstring-code-line-length = "dynamic"
